syntax = "proto3";
package fifsky.blog.admin.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "buf/validate/validate.proto";
import "admin/v1/common.proto";

option go_package = "gen/admin/v1";

service LinkService {
  rpc List(google.protobuf.Empty) returns (LinkListResponse) {
    option (google.api.http) = {
      post: "/api/admin/link/list"
      body: "*"
    };
  }
  rpc Create(LinkCreateRequest) returns (IDResponse) {
    option (google.api.http) = {
      post: "/api/admin/link/create"
      body: "*"
    };
  }
  rpc Update(LinkUpdateRequest) returns (IDResponse) {
    option (google.api.http) = {
      post: "/api/admin/link/update"
      body: "*"
    };
  }
  rpc Delete(IDRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/admin/link/delete"
      body: "*"
    };
  }
}

message LinkItem {
  int32 id = 1;
  string name = 2;
  string url = 3;
  string desc = 4;
  string created_at = 5;
}
message LinkListResponse {
  repeated LinkItem list = 1;
  int32 page_total = 2;
}

message LinkCreateRequest {
  string name = 1[(buf.validate.field).required = true, (google.api.field_behavior) = REQUIRED];
  string url = 2[(buf.validate.field).required = true, (google.api.field_behavior) = REQUIRED];
  string desc = 3;
}

message LinkUpdateRequest {
  int32 id = 1[(buf.validate.field).int32.gt = 0, (google.api.field_behavior) = REQUIRED];
  string name = 2;
  string url = 3;
  string desc = 4;
}
